Quinto commit/Alterações no header/home/produtos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,7 +30,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          <p class="p-custom fs-4">Rua Sergipe, 528 - Centro</p>
+          <p class="p-custom fs-4 mt-2">Rua Sergipe, 528 - Centro</p>
           <p class="p-custom fs-4">Londrina - Paraná</p>
         </div>
       </div>
