--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-custom">
-  <div class="container-fluid col-8">
+<nav class="navbar navbar-expand-lg navbar-light bg-custom fixed-top">
+  <div class="container-fluid col">
+
 
     <a class="navbar-brand" href="/home">
       <img class="logo" src="assets/images/logo.svg" alt="Use Riquirri" />
     </a>
+
+    <div class="navbar-center"><span class="texto-header fs-5">Elegância, Beleza e Auto Cuidado</span></div>
 
     <button
       class="navbar-toggler"
@@ -18,6 +21,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
+
       <ul class="navbar-nav navbar-start">
         <li class="nav-item">
           <a class="nav-link active a-custom" aria-current="page" routerLink="/produtos">Produtos</a>
@@ -27,8 +31,6 @@
           <a class="nav-link active a-custom" aria-current="page" routerLink="/quem-somos">Quem somos</a>
         </li>
       </ul>
-
-      <span class="mx-auto ">Elegância, Beleza e Auto Cuidado</span>
 
       <ul class="navbar-nav navbar-end ms-auto">
 
@@ -82,8 +84,6 @@
 
       </ul>
     </div>
-
-
 
   </div>
 </nav>
