--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-custom fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-custom">
   <div class="container-fluid col">
 
 
